--- a/css/styles.css
+++ b/css/styles.css
@@ -510,6 +510,7 @@ a.check-out {
 }
 
 a.check-out:hover {
+    outline: none;
     padding-bottom: 6px;
     background: hsla(190, 79%, 27%, 1);
     background: linear-gradient(90deg, var(--CheckGradColor2) 20%, var(--CheckGradColor1) 100%);
@@ -538,6 +539,7 @@ a.resume {
 }
 
 a.resume:hover {
+    outline: none;
     padding-bottom: 6px;
     background: hsla(0, 0%, 7%, 1);
     background: linear-gradient(90deg, var(--ResumeGradColor2) 30%, var(--ResumeGradColor1) 100%);
@@ -1231,6 +1233,7 @@ input[type="tel"] {
     a.check-out:hover,
     a.resume:hover {
         padding-bottom: 6px;
+        outline: none;
     }
 
     .about-buttons-big-screen {
@@ -1249,6 +1252,7 @@ input[type="tel"] {
     a.check-out:hover,
     a.resume:hover {
         padding-bottom: 6px;
+        outline: none;
     }
 
     a.check-out {
@@ -1279,6 +1283,7 @@ input[type="tel"] {
     a.check-out:hover,
     a.resume:hover {
         padding-bottom: 6px;
+        outline: none;
     }
 
     .about-buttons-big-screen {
@@ -1293,6 +1298,7 @@ input[type="tel"] {
     a.check-out:hover,
     a.resume:hover {
         padding-bottom: 6px;
+        outline: none;
     }
 
     .contact-image {
@@ -1387,6 +1393,7 @@ input[type="tel"] {
     a.check-out:hover,
     a.resume:hover {
         padding-bottom: 6px;
+        outline: none;
     }
 
     .about-buttons-small-screen {
@@ -1409,6 +1416,7 @@ input[type="tel"] {
     a.check-out:hover,
     a.resume:hover {
         padding-bottom: 6px;
+        outline: none;
     }
 
     .slider-container {
@@ -1433,6 +1441,7 @@ input[type="tel"] {
     a.check-out:hover,
     a.resume:hover {
         padding-bottom: 6px;
+        outline: none;
     }
 
     a.check-out,
@@ -1634,6 +1643,7 @@ input[type="tel"] {
     a.check-out:hover,
     a.resume:hover {
         padding-bottom: 6px;
+        outline: none;
     }
 
     .slider-overview-paragraph {
@@ -1676,6 +1686,7 @@ input[type="tel"] {
     a.check-out:hover,
     a.resume:hover {
         padding-bottom: 6px;
+        outline: none;
     }
 
     .slider-image {
@@ -1805,6 +1816,7 @@ input[type="tel"] {
     a.check-out:hover,
     a.resume:hover {
         padding-bottom: 6px;
+        outline: none;
     }
 
     .table-container {
